--- a/pu-style.css
+++ b/pu-style.css
@@ -17,9 +17,10 @@ body {
   background-color: #E5334B;
   color: #fff;
   padding-bottom: .7rem;
-  background: url('/Bg.png') no-repeat center center;
+  /* background: url('/Bg.png') no-repeat center center; */
   background-size: cover;
 }
+
 .course {
   color: #fff;
   height: 100vh;
@@ -139,4 +140,26 @@ hr{
     height: 500px;
     box-shadow: 0px 10px 0px #FFB800;
    }
+}
+
+/*Overwrite*/
+.header {
+  background-color: #000!important;
+  color: #fff;
+}
+.menu-text {
+  color: #fff!important
+}
+.menu-text .active {
+  color: #E5334B!important;
+}
+
+.coursehead{
+  color: #ffb800;
+}
+
+.btngender  {
+  background-color: #E5334B;
+  border-color: #E5334B;
+  color: #fff;
 }
