--- a/pu-style.css
+++ b/pu-style.css
@@ -167,3 +167,12 @@ hr{
 .header-mobile {
   background-color: #000 !important;
 }
+
+footer {
+  background-color: #000 !important;
+  color: #fff !important;
+}
+
+footer  a {
+  color: #FFB800!important;
+}
